# nomopractic

./: .env.device.example  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  config.toml  config.toml.example
.claude/: settings.json
.github/: .copilot-instructions.md
.github/workflows/: ble-integration.yml  ci.yml
docs/: architecture.md  hardware_reference.md  pairing.md  release_and_deploy.md  roadmap.md
docs/adr/: 001-ble-gatt-server.md  002-ble-binary-protocol.md  003-ble-security-model.md  004-ble-simplification.md  005-wifi-soft-ap.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.2.0.md
scripts/: ap-mode.sh  build-cross-image.sh  deploy.sh  pi_test_motors.sh
scripts/cross-image/: Dockerfile
src/: calibration.rs  config.rs  lib.rs  main.rs  reset.rs  testing.rs  wifi.rs
src/ble/: bridge.rs  mod.rs  protocol.rs  services.rs  session.rs  wifi.rs
src/hat/: adc.rs  audio.rs  battery.rs  gpio.rs  i2c.rs  mod.rs  motor.rs  pwm.rs  servo.rs  ultrasonic.rs
src/ipc/: handler.rs  mod.rs  params.rs  schema.rs
src/routine/: explore.rs  mod.rs
systemd/: nomon-softap-watchdog.service  nomon-softap-watchdog.timer  nomon-softap.service  nomopractic.service
systemd/polkit-1/rules.d/: 10-nomon-network.rules
systemd/tmpfiles.d/: nomon.conf
tests/: ble_pairing_integration.rs  ipc_integration.rs
