[package]
name = "nomopractic"
version = "0.4.0"
edition = "2024"
description = "Low-latency HAT hardware daemon for the nomon fleet"
license = "MIT"
repository = "https://github.com/Perceptua/nomopractic"

[dependencies]
tokio = { version = "1", features = ["full"] }
rppal = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
