[package]
name = "nomopractic"
version = "0.4.1"
edition = "2024"
description = "Low-latency HAT hardware daemon for the nomon fleet"
license = "MIT"
repository = "https://github.com/Perceptua/nomopractic"
include = ["src/**", "Cargo.toml", "README.md", "config.toml", "LICENSE"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rppal = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"

# Optional BLE dependencies — only compiled with `cargo build --features ble`.
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
jsonwebtoken = { version = "9", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
ccm = { version = "0.5", optional = true }
subtle = { version = "2", optional = true }
rand = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
ble = ["dep:bluer", "dep:jsonwebtoken", "dep:hkdf", "dep:sha2", "dep:aes", "dep:ccm", "dep:subtle", "dep:rand", "dep:tokio-stream"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
